--- a/app/index.html
+++ b/app/index.html
@@ -3,8 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 </head>
 <body>
-
+  <!-- views -->
+  <!-- end views -->
+  <script type="text/javascript" src="components/jquery/dist/jquery.js"></script>
+  <script type="text/javascript" src="components/underscore/underscore.js"></script>
+  <script type="text/javascript" src="components/backbone/backbone.js"></script>
+  <script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
